# astro_classifier

./: .coveragerc  .gitignore  README.md  app.py  data_loader.py  evaluate.py  models.py  preprocess.py  pyproject.toml  train.py
tests/: test_cli.py  test_data_loader.py  test_evaluate.py  test_evaluate_edge.py  test_models.py  test_preprocess.py  test_preprocess_advanced.py  test_preprocess_edge.py  test_train.py
