[tool.poetry]
name = "astro-classifier"
version = "1.0.0"
description = "Astrophysical Data Classifier - ML pipeline for SDSS galaxy/star/quasar classification"
authors = ["Rudra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3"
pandas = "^2.1"
numpy = "^1.24"
matplotlib = "^3.7"
seaborn = "^0.13"
xgboost = "^2.0"
streamlit = "^1.28"
joblib = "^1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
ruff = "^0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
